src/main/resources/Krakatau-master/tests/assembler/good/ldcs2.j
###preprocess###
.class public LdcTest
.super java/lang/Object

.const [11] = Long 1L
.const [3] = Double 1.0

.method public static print : (F)V
    .code stack 910 locals 10
###range(250,):
    ldc {}
###
        return
    .end code
.end method
.end class
