src/main/resources/Krakatau-master/tests/assembler/bad/stackframe_offset_toobig.j
.class public whocares
.super java/lang/Object

.method public static print : (F)V
    .code stack 10 locals 10
        .stack same
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop
        nop

        nop
        .stack same

        return
    .end code
.end method
.end class
